--- a/app/views/layouts/user.html.erb
+++ b/app/views/layouts/user.html.erb
@@ -49,7 +49,7 @@
             <div id="st-trigger-effects">
               <button data-effect="st-effect-4" id="menu-bars"></button>
             </div>
-            <h1>WOW</h1>
+            <h1>DIMANA</h1>
             <% if user_signed_in? %>
               <%= link_to "Welcome" ,"#!", id: "signin-button" %>
             <% else %>
