--- a/app/views/shared/_user_notification.html.erb
+++ b/app/views/shared/_user_notification.html.erb
@@ -1,5 +1,7 @@
 <% flash.each do |name, msg| -%>
     <%= content_tag :div, class: "notification #{name}" do %>
       <%= msg %>
+      <div class="close">X</div>
     <% end %>
+    <br/>
 <% end -%>
