--- a/app/views/layouts/user.html.erb
+++ b/app/views/layouts/user.html.erb
@@ -8,7 +8,7 @@
    <%= stylesheet_link_tag "user/application", :media => "all" %>
    <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
    <%= javascript_include_tag "user/application" %>
-  
+   <title>DIMANA</title>
 </head>
 
 <body>
