--- a/app/views/workshops/show_direction.html.erb
+++ b/app/views/workshops/show_direction.html.erb
@@ -1,30 +1,27 @@
-
-  <div class="panel panel-danger">
-    <div class="panel-heading">
-      <h3 class="panel-title"><strong><%= @workshop.name %></strong></h3>
+<div class="panel panel-danger">
+  <div class="panel-heading">
+    <h3 class="panel-title"><strong><%= @workshop.name %></strong></h3>
+  </div>
+  <div class="panel-body">
+    <div class="well">
+      <strong>Additional info:</strong>
+      <%= raw @workshop.about %>
     </div>
-    <div class="panel-body">
-      <div class="well">
-        <strong>Additional info:</strong>
-        <%= raw @workshop.about %>
-      </div>
-      <p>Contributed by:<strong><%= @workshop.creator.name %></strong></p>
-      <span class="label label-info">
-        <span class="glyphicon glyphicon-thumbs-up"></span>
-        <%= pluralize(@workshop.votes_for, 'Like') %>
-      </span>
-      &nbsp;
-      <span class="label label-danger">
-        <span class="glyphicon glyphicon-thumbs-down"></span>
-        <%= pluralize(@workshop.votes_against, 'Unlike') %>
-      </span>
-    </div>
-  </div>  
-
-  <div id="distance"></div>
-
-  <% if !@workshop.voted_by?(current_user) %>
-    <fieldset>
+    <p>Contributed by:<strong><%= @workshop.creator.name %></strong></p>
+    <span class="label label-info">
+      <span class="glyphicon glyphicon-thumbs-up"></span>
+      <%= pluralize(@workshop.votes_for, 'Like') %>
+    </span>
+    &nbsp;
+    <span class="label label-danger">
+      <span class="glyphicon glyphicon-thumbs-down"></span>
+      <%= pluralize(@workshop.votes_against, 'Unlike') %>
+    </span>
+  </div>
+</div>
+<div id="distance"></div>
+<% if user_signed_in? && !@workshop.voted_by?(current_user) %>
+  <fieldset>
     <%= button_to vote_up_workshop_path(@workshop.id), class: "btn btn-info half", method: :post  do %>
       <span class='glyphicon glyphicon-thumbs-up'></span>
       Like
@@ -33,44 +30,42 @@
       <span class='glyphicon glyphicon-thumbs-down'></span>
       Unlike
     <% end %>
-    
-</fieldset>
-  <% end %>
-
-<div id="map_canvas" style="height:500px;">
-<div class="spinner">
-  <div class="spinner-container container1">
-    <div class="circle1"></div>
-    <div class="circle2"></div>
-    <div class="circle3"></div>
-    <div class="circle4"></div>
-  </div>
-  <div class="spinner-container container2">
-    <div class="circle1"></div>
-    <div class="circle2"></div>
-    <div class="circle3"></div>
-    <div class="circle4"></div>
-  </div>
-  <div class="spinner-container container3">
-    <div class="circle1"></div>
-    <div class="circle2"></div>
-    <div class="circle3"></div>
-    <div class="circle4"></div>
-  </div>
-</div></div>
+  </fieldset>
+<% end %>
+<div id="map_canvas" style="height:500px;margin:6%;">
+  <div class="spinner">
+    <div class="spinner-container container1">
+      <div class="circle1"></div>
+      <div class="circle2"></div>
+      <div class="circle3"></div>
+      <div class="circle4"></div>
+    </div>
+    <div class="spinner-container container2">
+      <div class="circle1"></div>
+      <div class="circle2"></div>
+      <div class="circle3"></div>
+      <div class="circle4"></div>
+    </div>
+    <div class="spinner-container container3">
+      <div class="circle1"></div>
+      <div class="circle2"></div>
+      <div class="circle3"></div>
+      <div class="circle4"></div>
+    </div>
+  </div></div>
 <style type="text/css">
   .spinner {
   margin: 100px auto;
   width: 50px;
   height: 50px;
   position: relative;
-}
-
-.container1 > div, .container2 > div, .container3 > div {
+  }
+  
+  .container1 > div, .container2 > div, .container3 > div {
   width: 6px;
   height: 6px;
   background-color: #FF4136;
-
+  
   border-radius: 100%;
   position: absolute;
   -webkit-animation: bouncedelay 1.2s infinite ease-in-out;
@@ -78,98 +73,98 @@
   /* Prevent first frame from flickering when animation starts */
   -webkit-animation-fill-mode: both;
   animation-fill-mode: both;
-}
-
-.spinner .spinner-container {
+  }
+  
+  .spinner .spinner-container {
   position: absolute;
   width: 100%;
   height: 100%;
-}
-
-.container2 {
+  }
+  
+  .container2 {
   -webkit-transform: rotateZ(45deg);
   transform: rotateZ(45deg);
-}
-
-.container3 {
+  }
+  
+  .container3 {
   -webkit-transform: rotateZ(90deg);
   transform: rotateZ(90deg);
-}
-
-.circle1 { top: 0; left: 0; }
-.circle2 { top: 0; right: 0; }
-.circle3 { right: 0; bottom: 0; }
-.circle4 { left: 0; bottom: 0; }
-
-.container2 .circle1 {
+  }
+  
+  .circle1 { top: 0; left: 0; }
+  .circle2 { top: 0; right: 0; }
+  .circle3 { right: 0; bottom: 0; }
+  .circle4 { left: 0; bottom: 0; }
+  
+  .container2 .circle1 {
   -webkit-animation-delay: -1.1s;
   animation-delay: -1.1s;
-}
-
-.container3 .circle1 {
+  }
+  
+  .container3 .circle1 {
   -webkit-animation-delay: -1.0s;
   animation-delay: -1.0s;
-}
-
-.container1 .circle2 {
+  }
+  
+  .container1 .circle2 {
   -webkit-animation-delay: -0.9s;
   animation-delay: -0.9s;
-}
-
-.container2 .circle2 {
+  }
+  
+  .container2 .circle2 {
   -webkit-animation-delay: -0.8s;
   animation-delay: -0.8s;
-}
-
-.container3 .circle2 {
+  }
+  
+  .container3 .circle2 {
   -webkit-animation-delay: -0.7s;
   animation-delay: -0.7s;
-}
-
-.container1 .circle3 {
+  }
+  
+  .container1 .circle3 {
   -webkit-animation-delay: -0.6s;
   animation-delay: -0.6s;
-}
-
-.container2 .circle3 {
+  }
+  
+  .container2 .circle3 {
   -webkit-animation-delay: -0.5s;
   animation-delay: -0.5s;
-}
-
-.container3 .circle3 {
+  }
+  
+  .container3 .circle3 {
   -webkit-animation-delay: -0.4s;
   animation-delay: -0.4s;
-}
-
-.container1 .circle4 {
+  }
+  
+  .container1 .circle4 {
   -webkit-animation-delay: -0.3s;
   animation-delay: -0.3s;
-}
-
-.container2 .circle4 {
+  }
+  
+  .container2 .circle4 {
   -webkit-animation-delay: -0.2s;
   animation-delay: -0.2s;
-}
-
-.container3 .circle4 {
+  }
+  
+  .container3 .circle4 {
   -webkit-animation-delay: -0.1s;
   animation-delay: -0.1s;
-}
-
-@-webkit-keyframes bouncedelay {
+  }
+  
+  @-webkit-keyframes bouncedelay {
   0%, 80%, 100% { -webkit-transform: scale(0.0) }
   40% { -webkit-transform: scale(1.0) }
-}
-
-@keyframes bouncedelay {
-  0%, 80%, 100% { 
+  }
+  
+  @keyframes bouncedelay {
+  0%, 80%, 100% {
     transform: scale(0.0);
     -webkit-transform: scale(0.0);
-  } 40% { 
+  } 40% {
     transform: scale(1.0);
     -webkit-transform: scale(1.0);
   }
-}
+  }
 </style>
 <!-- Instruction -->
 <div id="instructions_container">
