--- a/app/views/layouts/user.html.erb
+++ b/app/views/layouts/user.html.erb
@@ -8,7 +8,7 @@
    <%= stylesheet_link_tag "user/application", :media => "all" %>
    <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
    <%= javascript_include_tag "user/application" %>
-   <title>DIMANA</title>
+   <title>SERVIS DIMANA</title>
 </head>
 
 <body>
@@ -49,7 +49,7 @@
             <div id="st-trigger-effects">
               <button data-effect="st-effect-4" id="menu-bars"></button>
             </div>
-            <h1>DIMANA</h1>
+            <h1>SERVIS DIMANA</h1>
             <% if user_signed_in? %>
               <%= link_to "Welcome" ,"#!", id: "signin-button" %>
             <% else %>
